<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VuPlayer</string>
    <string name="title_activity_main">VuPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="action_rescan_title">Rescan external storage</string>
    <string name="action_translate_title">Translate</string>
    <string name="action_add_title">Add to notes</string>
    <string name="action_go_to_video">Go to video</string>

    <string name="control_play">Play</string>
    <string name="control_pause">Pause</string>
    <string name="control_backward">Backward</string>
    <string name="control_forward">Forward</string>

    <string name="filename">/test.mp4</string>

    <string name="translate_google_http_request">
        http://translate.google.com/translate_a/t?client=x&amp;text=%1$s&amp;sl=%2$s&amp;tl=%3$s
    </string>

    <string name="text_to_translate_view_hint">Enter text</string>
    <string name="translation_dialog_progress_message">Retrieving translation&#8230;</string>
    <string name="translation_dialog_more_button_text">More&#8230;</string>
    <string name="translation_dialog_add_button_text">Add to notes&#8230;</string>
    <string name="translation_dialog_cancel_button_text">Cancel</string>

    <string name="source_language_default">auto</string>
    <string name="translation_language_default">ru</string>

    <string name="video_folder_name">Video</string>
    <string name="notes_folder_name">Notes</string>

    <string name="notes_word_combination">Word Combination:</string>
    <string name="notes_source">Source:</string>
    <string name="notes_comment">Comment:</string>
    <string name="notes_hint_word_combination">Phrase</string>
    <string name="notes_hint_source">Video file name</string>
    <string name="notes_hint_comment">Comment to note</string>
    <string name="notes_add">Add</string>
    <string name="notes_save">Save note</string>
    <string name="notes_edit">Edit note</string>
    <string name="notes_delete">Delete note</string>
    <string name="empty_field_message">Empty Word Combination!</string>
    <string name="notes_added_notes">Already added notes:</string>
    <string name="notes_share_text">Share:</string>

</resources>
