<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/video_surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play"
        android:layout_alignParentTop="true" />


        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_play"
            android:textSize="@dimen/control_buttons_text_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="?android:attr/buttonStyleSmall"/>

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_pause"
            android:textSize="@dimen/control_buttons_text_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/play"
            style="?android:attr/buttonStyleSmall"/>

        <Button
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_backward"
            android:textSize="@dimen/control_buttons_text_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/pause"
            style="?android:attr/buttonStyleSmall"/>

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_forward"
            android:textSize="@dimen/control_buttons_text_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/backward"
            style="?android:attr/buttonStyleSmall"/>

</RelativeLayout>