<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_word_combination"
        android:textStyle="bold"
        android:textSize="@dimen/list_item_text_size"
        android:textColor="@color/list_item_text_color"/>

    <TextView
        android:id="@+id/item_word_combination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_source"
        android:textStyle="bold"
        android:textSize="@dimen/list_item_text_size"
        android:textColor="@color/list_item_text_color"/>

    <TextView
        android:id="@+id/item_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_comment"
        android:textStyle="bold"
        android:textSize="@dimen/list_item_text_size"
        android:textColor="@color/list_item_text_color" />

    <TextView
        android:id="@+id/item_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size" />
</LinearLayout>